fixed navbar button heights to align

--- a/navbar.css
+++ b/navbar.css
@@ -225,6 +225,7 @@
 
   .navigation-section .noDrop,
   .navigation-section .dropdown .dropbtn{
+    height: 100%;
     font-size: 17px;
   }
 
